# spo-skupina-1

./: Cargo.toml  Dioxus.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml
assets/: PerfectDOSVGA437.sfd  main.css
src/: main.rs
