[package]
name = "spo-skupina-1"
version = "0.1.0"
authors = ["Gapi505 <sodjagas@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
dioxus-logger = "0.5.1"
web-sys = "0.3.70"
log = "0.4.22"
